--- a/wp-content/plugins/capitainewp-gut-bases/src/12-block-image-text/editor.scss
+++ b/wp-content/plugins/capitainewp-gut-bases/src/12-block-image-text/editor.scss
@@ -1,6 +1,14 @@
 .wp-block-capitainewp-block-image-text {
-	z-index: 11;
 	position: relative;
+ 	 z-index: 11;
+	.image{
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+	  z-index: -1;
+	}
 	h2 {
 		color: #fff;
 		font-size: 2.5em;
